# todorate

./: .gitignore  README.md  alembic.ini  pyproject.toml
todorate/: app.py  config.py
todorate/cli/: __init__.py  app.py
todorate/database/: __init__.py
todorate/database/migrations/: env.py
todorate/database/migrations/versions/: f0cd81b9df08_.py
todorate/database/models/: _all_models.py  base.py  project.py  tag.py  task.py  user.py
todorate/dependencies/: database.py
