[tool.poetry]
name = "todorate"
version = "0.1.0"
description = ""
authors = ["Riley Flynn <riley@rileyflynn.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = {version="^1.10.3", extras=["dotenv"]}
spacy = "^3.4.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
