[tool.poetry]
name = "todorate"
version = "0.1.0"
description = ""
authors = ["Riley Flynn <riley@rileyflynn.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = {version = "^1.10.3", extras = ["dotenv"]}
spacy = "^3.4.4"
typer = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.45"}
alembic = "^1.9.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", extras = ["d"]}
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]